force-app/shared/objects/UnlockedPackage__c/fields/GitHubRepositoryPath__c.field-meta.xml
<CustomField>
    <fullName>GitHubRepositoryPath__c</fullName>
    <description
    >The path to the Unlocked Packages related Github Repository in the following format: https://github.com/:owner/:repo. For example &quot;https://github.com/mycompany/mypackagerepo&quot;.</description>
    <inlineHelpText
    >The path to the Unlocked Packages related Github Repository in the following format: https://github.com/:owner/:repo. For example &quot;https://github.com/mycompany/mypackagerepo&quot;.</inlineHelpText>
    <label>GitHub Repository Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>