force-app/shared/objects/UnlockedPackage__c/fields/LastQueried__c.field-meta.xml
<CustomField>
    <fullName>LastQueried__c</fullName>
    <description
    >The date and time the package was last successfully queried and updated with latest released version and dependency information</description>
    <inlineHelpText
    >The date and time the package was last successfully queried and updated with latest released version and dependency information</inlineHelpText>
    <label>Last Queried</label>
    <type>DateTime</type>
</CustomField>