force-app/shared/objects/UnlockedPackage__c/fields/LatestReleasedSubscriberPackageVersionId__c.field-meta.xml
<CustomField>
    <fullName>LatestReleasedSubscriberPackageVersionId__c</fullName>
    <description>The latest package version (highest version number) that has been promoted to released</description>
    <inlineHelpText
    >The latest package version (highest version number) that has been promoted to released</inlineHelpText>
    <label>Latest Released Version Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>