force-app/shared/objects/UnlockedPackage__c/fields/LatestReleasedVersionInstallOrder__c.field-meta.xml
<CustomField>
    <fullName>LatestReleasedVersionInstallOrder__c</fullName>
    <description
    >The logical installation order of the latest released version of this unlocked package. Populated by Apex and used to be able to query this object in order to know how to install all latest released versions of unlocked packages in the correct dependency order. Used by Github Action CI workflow to ensure the compatibility of released package versions.</description>
    <inlineHelpText
    >The logical installation order of the latest released version of this unlocked package. Used by Github Action CI workflow to ensure the compatibility of released package versions.</inlineHelpText>
    <label>Latest Released Version Install Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>