force-app/shared/objects/UnlockedPackage__c/fields/SubscriberPackageId__c.field-meta.xml
<CustomField>
    <fullName>SubscriberPackageId__c</fullName>
    <description
    >The Unlocked Packages 18 character SubscriberPackageId (starts with 033). Can be viewed through the sfdx force:package:list command with the --verbose parameter.</description>
    <inlineHelpText
    >The Unlocked Packages 18 character SubscriberPackageId (starts with 033). Can be viewed through the sfdx force:package:list command with the --verbose parameter.</inlineHelpText>
    <label>Subscriber Package Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>