force-app/shared/objects/UnlockedPackage__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <description
    >The team who owns the package. Used to filter packages in the Development Pipeline tab.</description>
    <inlineHelpText
    >The team who owns the package. Used to filter packages in the Development Pipeline tab.</inlineHelpText>
    <label>Team</label>
    <length>3</length>
    <type>Text</type>
</CustomField>