force-app/shared/objects/UnlockedPackage__c/listViews/All_Unlocked_Packages.listView-meta.xml
<ListView>
    <fullName>All_Unlocked_Packages</fullName>
    <columns>NAME</columns>
    <columns>ColorCode__c</columns>
    <columns>Team__c</columns>
    <columns>SubscriberPackageId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Unlocked Packages</label>
</ListView>